<resources>
    <string name="app_name">VelogAndroid</string>
    <string name="tv_sign_in_title">벨로그를 \n모바일로 더 간편하게</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="tv_home_home">Home</string>
    <string name="tv_add_tag">내 태그</string>
    <string name="tv_item_rv_follow_cancel">팔로우 취소</string>
    <string name="tv_follow_title">팔로우 중인 사람</string>
    <string name="content_description_follow_reading_glasses">돋보기</string>
    <string name="tv_bottom_sheet_follow_add_title">팔로우 추가</string>
    <string name="content_description_bottom_sheet_follow_add_cancel">취소 아이콘</string>
    <string name="et_bottom_sheet_follow_add">팔로우를 추가해보세요.</string>
    <string name="tv_bottom_sheet_follow_add_btn">추가</string>
    <string name="tv_follow_empty_title_1">아직 팔로우 한 사람이 없어요.</string>
    <string name="tv_follow_empty_title_2">다른 사람들을 팔로우해 보세요.</string>
    <string name="tv_dialog_follow_title">정말 팔로우를 취소하시겠습니까?</string>
    <string name="btn_dialog_follow_no">아니오</string>
    <string name="btn_dialog_follow_yes">네</string>
    <string name="tv_all_clear">모두 지우기</string>
    <string name="tv_pop_tag">인기 키워드</string>
    <string name="tv_add_tag_hint">태그를 추가해보세요</string>
    <string name="tv_intro_delete_tag">정말 태그를 삭제하시겠습니까?</string>
    <string name="etv_home_search_title">검색어를 입력해보세요.</string>
    <string name="tv_recent_search">최근 검색어</string>
    <string name="tv_easyvel">EasyVel</string>
    <string name="contentDescription_iv_follow">팔로워 이미지</string>
    <string name="tv_setting_version">버전 정보: 1.0</string>
    <string name="tv_setting_information">개인정보 처리방침</string>
    <string name="tv_setting_clause">이용약관</string>
    <string name="tv_setting_logout">로그아웃</string>
    <string name="tv_setting_withdrawal">회원탈퇴</string>
    <string name="tv_logout_dialog_title">로그아웃</string>
    <string name="tv_logout_dialog_detail">정말 로그아웃 하시겠습니까?</string>
    <string name="tv_withdrawal_dialog_warning">※ 회원님의 데이터가 사라집니다.</string>
    <string name="tv_withdrawal_dialog_detail">정말 탈퇴하시겠습니까?</string>
    <string name="tv_withdrawal_dialog_title">회원탈퇴</string>
    <string name="et_follow_hint">사용자를 검색해보세요.</string>
    <string name="tv_add_follower_emtpy_title">존재하지 않는 사용자입니다.</string>
    <string name="tv_add_follower_empty_detail">다시 검색해주세요.</string>
    <string name="tv_add_follower_button">팔로우</string>

    <string name="tv_empty_post">아직 관련 글이 없어요.</string>

    <string name="tv_progress">Loading...</string>

</resources>