<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_bottom_sheet_follow_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_bottom_sheet_follow_add_title"
        android:textAppearance="@style/TextAppearance.VelogM.Body2_B"
        android:textColor="@color/velog_gray700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bottom_sheet_follow_add_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/content_description_bottom_sheet_follow_add_cancel"
        android:padding="5dp"
        android:src="@drawable/ic_bottom_sheet_follow_add_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_bottom_sheet_follow_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/shape_gray100_fill_4_rect"
        android:drawableStart="@drawable/ic_bottom_sheet_follow_add"
        android:drawablePadding="12dp"
        android:hint="@string/et_bottom_sheet_follow_add"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:textAppearance="@style/TextAppearance.VelogM.Body1_M"
        android:textColorHint="@color/velog_gray500"
        app:layout_constraintEnd_toStartOf="@id/tv_bottom_sheet_follow_add_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_follow_add_title"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_bottom_sheet_follow_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_gray100_fill_6_rect"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/tv_bottom_sheet_follow_add_btn"
        android:textAppearance="@style/TextAppearance.VelogM.Body1_M"
        android:textColor="@color/velog_gray300"
        app:layout_constraintBottom_toBottomOf="@id/et_bottom_sheet_follow_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_bottom_sheet_follow_add" />


</androidx.constraintlayout.widget.ConstraintLayout>